--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -151,7 +151,9 @@ const iconLinks: {
       };
 
       // Toggle menu visibility when the menu button is clicked.
-      btn.addEventListener("click", () => setExpanded(menu.hidden));
+      btn.addEventListener("click", () =>{ 
+        setExpanded(btn.getAttribute("aria-expanded") !== "true"); });
+      //  setExpanded(menu.hidden));
 
       // Hide menu button for large screens.
       const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
