--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,9 @@ import MainHead from '../components/MainHead.astro';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 
+import i18next from "i18next";
+import { HeadHrefLangs } from "astro-i18next/components";
+
 interface Props {
 	title?: string | undefined;
 	description?: string | undefined;
@@ -15,9 +18,10 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<html lang="en">
+<html lang={i18next.language}>
 	<head>
 		<MainHead title={title} description={description} />
+		<HeadHrefLangs />
 	</head>
 	<body>
 		<div class="stack backgrounds">
