--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -1,20 +1,21 @@
 ---
 import { getCollection } from "astro:content";
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
-import BaseLayout from "../layouts/BaseLayout.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
 import { t, changeLanguage } from "i18next";
+import { HeadHrefLangs } from "astro-i18next/components";
 // Component Imports
-import CallToAction from "../components/CallToAction.astro";
-import Grid from "../components/Grid.astro";
-import Hero from "../components/Hero.astro";
-import Icon from "../components/Icon.astro";
-import Pill from "../components/Pill.astro";
-import PortfolioPreview from "../components/PortfolioPreview.astro";
+import CallToAction from "../../components/CallToAction.astro";
+import Grid from "../../components/Grid.astro";
+import Hero from "../../components/Hero.astro";
+import Icon from "../../components/Icon.astro";
+import Pill from "../../components/Pill.astro";
+import PortfolioPreview from "../../components/PortfolioPreview.astro";
 // Page section components
-import ContactCTA from "../components/ContactCTA.astro";
-import Skills from "../components/Skills.astro";
+import ContactCTA from "../../components/ContactCTA.astro";
+import Skills from "../../components/Skills.astro";
 
-changeLanguage("en");
+changeLanguage("es");
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection("work"))
@@ -23,6 +24,7 @@ const projects = (await getCollection("work"))
 ---
 
 <BaseLayout>
+  <HeadHrefLangs />
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
