--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -7,13 +7,19 @@ import PortfolioPreview from "../components/PortfolioPreview.astro";
 import Hero from "../components/Hero.astro";
 import Grid from "../components/Grid.astro";
 
+// Personal info
+import { personalInfo } from "../constants";
+
+// Object to translate
+import { t } from "i18next";
+ 
 changeLanguage("en");
 
 const projects = (await getCollection("work")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf());
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
+	title={`${t("common.workTabTitle")} | ${personalInfo.name}`}
 	description="Learn about Jeanine White's most recent projects"
 >
 	<div class="stack gap-20">
