--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,54 +1,44 @@
 ---
 import Icon from "./Icon.astro";
-import ThemeToggle from './ThemeToggle.astro';;;;;
-import type { iconPaths } from "./IconPaths";
+import ThemeToggle from "./ThemeToggle.astro";
 
-/** Main menu items */
-const textLinks: { label: string; href: string }[] = [
-  { label: "Home", href: "/" },
-  { label: "Work", href: "/work/" },
-  { label: "About", href: "/about/" },
-];
+// Constants
+import { textLinks, socialMediaIconLinks } from "../constants";
 
-/** Icon links to social media — edit these with links to your profiles! */
-const iconLinks: {
-  label: string;
-  href: string;
-  icon: keyof typeof iconPaths;
-}[] = [
-  { label: "Twitter", href: "https://twitter.com/me", icon: "twitter-logo" },
-  { label: "Twitch", href: "https://twitch.tv/me", icon: "twitch-logo" },
-  { label: "GitHub", href: "https://github.com/me", icon: "github-logo" },
-  { label: "CodePen", href: "https://codepen.io/me", icon: "codepen-logo" },
-  { label: "dribbble", href: "https://dribbble.com/me", icon: "dribbble-logo" },
-  {
-    label: "YouTube",
-    href: "https://www.youtube.com/@me/",
-    icon: "youtube-logo",
-  },
-];
+// Personal info
+import { personalInfo } from "../constants";
+
+// Check current language and object to translate
+import { t, changeLanguage } from "i18next";
+import i18next from "i18next";
+
+changeLanguage(i18next.language);
 ---
 
 <nav>
   <div class="menu-header">
     <a href="/" class="site-title">
       <Icon
-        icon="terminal-window"
+        icon="device-floppy"
         color="var(--accent-regular)"
         size="1.6em"
         gradient
       />
-       Jeanine White
+      <span>{personalInfo.name}</span>
     </a>
+    <!-- Mobile Menu -->
     <menu-button>
       <template>
         <button class="menu-button" aria-expanded="false">
-          <span class="sr-only">Menu</span>
+          <span class="sr-only">
+            {t("common.menuTitle")}
+          </span>
           <Icon icon="list" />
         </button>
       </template>
     </menu-button>
   </div>
+  <!-- Draw menu when Javascript off -->
   <noscript>
     <ul class="nav-items">
       {
@@ -66,7 +56,8 @@ const iconLinks: {
               ]}
               href={href}
             >
-              {label}
+              {t(label)}
+              <span class="underline"/>
             </a>
           </li>
         ))
@@ -77,7 +68,7 @@ const iconLinks: {
     <div class="menu-footer">
       <div class="socials">
         {
-          iconLinks.map(({ href, icon, label }) => (
+          socialMediaIconLinks.map(({ href, icon, label }) => (
             <a href={href} class="social">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
@@ -87,6 +78,7 @@ const iconLinks: {
       </div>
     </div>
   </noscript>
+  <!-- Draw menu when Javascript on -->
   <div id="menu-content" hidden>
     <ul class="nav-items">
       {
@@ -104,7 +96,8 @@ const iconLinks: {
               ]}
               href={href}
             >
-              {label}
+              {t(label)}
+              <span class="underline"/>
             </a>
           </li>
         ))
@@ -113,7 +106,7 @@ const iconLinks: {
     <div class="menu-footer">
       <div class="socials">
         {
-          iconLinks.map(({ href, icon, label }) => (
+          socialMediaIconLinks.map(({ href, icon, label }) => (
             <a href={href} class="social">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
@@ -151,8 +144,9 @@ const iconLinks: {
       };
 
       // Toggle menu visibility when the menu button is clicked.
-      btn.addEventListener("click", () =>{ 
-        setExpanded(btn.getAttribute("aria-expanded") !== "true"); });
+      btn.addEventListener("click", () => {
+        setExpanded(btn.getAttribute("aria-expanded") !== "true");
+      });
       //  setExpanded(menu.hidden));
 
       // Hide menu button for large screens.
@@ -202,7 +196,7 @@ const iconLinks: {
     font-size: 1.5rem;
     color: var(--gray-300);
     background: radial-gradient(var(--gray-900), var(--gray-800) 150%);
-    box-shadow: var(--shadow-md);
+    box-shadow: var(--shadow-sm);
   }
 
   .menu-button[aria-expanded="true"] {
@@ -244,19 +238,25 @@ const iconLinks: {
   }
 
   .link {
-    display: inline-block;
+    display: flex;
+    padding: 0.75rem 1.5rem;
+    border-radius: 0.75rem;
     color: var(--gray-300);
     text-decoration: none;
   }
 
   .link.active {
     color: var(--gray-0);
+    background-color: var(--accent-regular);
   }
+  
+  a .underline {
+      display: none;
+    }
 
   .menu-footer {
     --icon-size: var(--text-xl);
     --icon-padding: 0.5rem;
-
     display: flex;
     justify-content: space-between;
     gap: 0.75rem;
@@ -320,22 +320,13 @@ const iconLinks: {
       border-radius: 999rem;
       border: 0;
       padding: 0.5rem 0.5625rem;
-      background: radial-gradient(var(--gray-900), var(--gray-800) 150%);
-      box-shadow: var(--shadow-md);
-    }
-
-    .nav-items::before {
-      position: absolute;
-      inset: -1px;
-      content: "";
-      background: var(--gradient-stroke);
-      border-radius: 999rem;
-      z-index: -1;
+      background-color: transparent;
     }
 
     .link {
       padding: 0.5rem 1rem;
       border-radius: 999rem;
+      color: var(--menu-text-color);
       transition:
         color var(--theme-transition),
         background-color var(--theme-transition);
@@ -343,13 +334,13 @@ const iconLinks: {
 
     .link:hover,
     .link:focus {
-      color: var(--gray-100);
-      background-color: var(--accent-subtle-overlay);
+      color: var(--menu-text-color-hover);
+      background-color: var(--menu-bg-color-hover);
     }
 
     .link.active {
-      color: var(--accent-text-over);
-      background-color: var(--accent-regular);
+      color: var(--menu-text-color-active);
+      background-color: var(--menu-bg-color-active);
     }
 
     .menu-footer {
