--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,13 @@
 
 	--link-color: var(--accent-regular);
 
+	/* Menu */
+	--menu-text-color: var(--gray-100);
+	--menu-text-color-active: var(--accent-regular);
+	--menu-bg-color-active: var(--gray-800);
+	--menu-text-color-hover: var(--gray-900);
+	--menu-bg-color-hover: var(--accent-regular);
+
 	/* Gradients */
 	--gradient-stop-1: var(--accent-light);
 	--gradient-stop-2: var(--accent-regular);
@@ -96,6 +103,13 @@
 	--accent-text-over: var(--gray-0);
 
 	--link-color: var(--accent-dark);
+
+	/* Menu */
+	--menu-text-color: var(--gray-0);
+	--menu-text-color-active: var(--gray-0);
+	--menu-bg-color-active: var(--accent-regular);
+	--menu-text-color-hover: var(--gray-0);
+	--menu-bg-color-hover: var(--accent-overlay);
 
 	--gradient-stop-1: #4c11c6;
 	--gradient-subtle: linear-gradient(150deg, var(--gray-900) 19%, var(--gray-999) 81%);
