--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -118,7 +118,9 @@ changeLanguage(i18next.language);
       </div>
       <!-- Language Selector -->
       <div class="language-selector">
-        <a href="/es/" class:list={[
+        <a
+          href="/es/"
+          class:list={[
             "lang-link",
             {
               active: i18next.language === "es",
@@ -127,288 +129,292 @@ changeLanguage(i18next.language);
           >ES
           <!-- FLag -->
         </a>
-        <a href="/" class:list={[
+        <a
+          href="/"
+          class:list={[
             "lang-link",
             {
               active: i18next.language === "en",
             },
           ]}
-          
           >EN
         </a>
+      </div>
     </div>
   </div>
-</nav>
 
-<script>
-  class MenuButton extends HTMLElement {
-    constructor() {
-      super();
+  <script>
+    class MenuButton extends HTMLElement {
+      constructor() {
+        super();
 
-      // Inject menu toggle button when JS runs.
-      this.appendChild(this.querySelector("template")!.content.cloneNode(true));
-      const btn = this.querySelector("button")!;
+        // Inject menu toggle button when JS runs.
+        this.appendChild(
+          this.querySelector("template")!.content.cloneNode(true)
+        );
+        const btn = this.querySelector("button")!;
 
-      // Hide menu (shown by default to support no-JS browsers).
-      const menu = document.getElementById("menu-content")!;
-      menu.hidden = true;
-      // Add "menu-content" class in JS to avoid covering content in non-JS browsers.
-      menu.classList.add("menu-content");
+        // Hide menu (shown by default to support no-JS browsers).
+        const menu = document.getElementById("menu-content")!;
+        menu.hidden = true;
+        // Add "menu-content" class in JS to avoid covering content in non-JS browsers.
+        menu.classList.add("menu-content");
 
-      /** Set whether the menu is currently expanded or collapsed. */
-      const setExpanded = (expand: boolean) => {
-        btn.setAttribute("aria-expanded", expand ? "true" : "false");
-        menu.hidden = !expand;
-      };
+        /** Set whether the menu is currently expanded or collapsed. */
+        const setExpanded = (expand: boolean) => {
+          btn.setAttribute("aria-expanded", expand ? "true" : "false");
+          menu.hidden = !expand;
+        };
 
-      // Toggle menu visibility when the menu button is clicked.
-      btn.addEventListener("click", () => {
-        setExpanded(btn.getAttribute("aria-expanded") !== "true");
-      });
-      //  setExpanded(menu.hidden));
+        // Toggle menu visibility when the menu button is clicked.
+        btn.addEventListener("click", () => {
+          setExpanded(btn.getAttribute("aria-expanded") !== "true");
+        });
+        //  setExpanded(menu.hidden));
 
-      // Hide menu button for large screens.
-      const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
-        setExpanded(e.matches);
-        btn.hidden = e.matches;
-      };
-      const mediaQueries = window.matchMedia("(min-width: 50em)");
-      handleViewports(mediaQueries);
-      mediaQueries.addEventListener("change", handleViewports);
+        // Hide menu button for large screens.
+        const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
+          setExpanded(e.matches);
+          btn.hidden = e.matches;
+        };
+        const mediaQueries = window.matchMedia("(min-width: 50em)");
+        handleViewports(mediaQueries);
+        mediaQueries.addEventListener("change", handleViewports);
+      }
     }
-  }
-  customElements.define("menu-button", MenuButton);
-</script>
+    customElements.define("menu-button", MenuButton);
+  </script>
 
-<style>
-  nav {
-    z-index: 9999;
-    position: relative;
-    font-family: var(--font-brand);
-    font-weight: 500;
-    margin-bottom: 3.5rem;
-  }
-
-  .menu-header {
-    display: flex;
-    justify-content: space-between;
-    gap: 0.5rem;
-    padding: 1.5rem;
-  }
-
-  .site-title {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    line-height: 1.1;
-    color: var(--gray-0);
-    text-decoration: none;
-  }
-
-  .menu-button {
-    position: relative;
-    display: flex;
-    border: 0;
-    border-radius: 999rem;
-    padding: 0.5rem;
-    font-size: 1.5rem;
-    color: var(--gray-300);
-    background: radial-gradient(var(--gray-900), var(--gray-800) 150%);
-    box-shadow: var(--shadow-sm);
-  }
-
-  .menu-button[aria-expanded="true"] {
-    color: var(--gray-0);
-    background: linear-gradient(180deg, var(--gray-600), transparent),
-      radial-gradient(var(--gray-900), var(--gray-800) 150%);
-  }
-
-  .menu-button[hidden] {
-    display: none;
-  }
-
-  .menu-button::before {
-    position: absolute;
-    inset: -1px;
-    content: "";
-    background: var(--gradient-stroke);
-    border-radius: 999rem;
-    z-index: -1;
-  }
-
-  .menu-content {
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
-
-  .nav-items {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    font-size: var(--text-md);
-    line-height: 1.2;
-    list-style: none;
-    padding: 2rem;
-    background-color: var(--gray-999);
-    border-bottom: 1px solid var(--gray-800);
-  }
-
-  .link {
-    display: flex;
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.75rem;
-    color: var(--gray-300);
-    text-decoration: none;
-  }
-
-  .link.active {
-    color: var(--gray-0);
-    background-color: var(--accent-regular);
-  }
-
-  .menu-footer {
-    --icon-size: var(--text-xl);
-    --icon-padding: 0.5rem;
-    display: flex;
-    justify-content: space-between;
-    gap: 0.75rem;
-    padding: 1.5rem 2rem 1.5rem 1.5rem;
-    background-color: var(--gray-999);
-    border-radius: 0 0 0.75rem 0.75rem;
-    box-shadow: var(--shadow-lg);
-  }
-
-  .socials {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0.625rem;
-    font-size: var(--icon-size);
-  }
-
-  .social {
-    display: flex;
-    padding: var(--icon-padding);
-    text-decoration: none;
-    color: var(--accent-dark);
-    transition: color var(--theme-transition);
-  }
-
-  .social:hover,
-  .social:focus {
-    color: var(--accent-text-over);
-  }
-
-  .theme-toggle {
-    display: flex;
-    align-items: center;
-    height: calc(var(--icon-size) + 2 * var(--icon-padding));
-  }
-
-  .language-selector {
-    display: flex;
-    align-items: center;
-    height: calc(var(--icon-size) + 2 * var(--icon-padding));
-    gap: 0.3rem;
-  }
-
-  .lang-link {
-    display: flex;
-    padding: var(--icon-padding);
-    text-decoration: none;
-    color: var(--accent-dark);
-    transition: color var(--theme-transition);
-    border-radius: 0.2rem;
-  }
-
-  .lang-link:hover,
-  .lang-link:focus {
-    color: var(--menu-text-color-hover);
-    background-color: var(--menu-bg-color-hover);
-  }
-
-  .lang-link.active {
-    color: var(--menu-text-color-active);
-    background-color: var(--menu-bg-color-active);
-  }
-
-  @media (min-width: 50em) {
+  <style>
     nav {
-      display: grid;
-      grid-template-columns: 1fr auto 1fr;
-      align-items: center;
-      padding: 2.5rem 5rem;
-      gap: 1rem;
+      z-index: 9999;
+      position: relative;
+      font-family: var(--font-brand);
+      font-weight: 500;
+      margin-bottom: 3.5rem;
     }
 
     .menu-header {
-      padding: 0;
+      display: flex;
+      justify-content: space-between;
+      gap: 0.5rem;
+      padding: 1.5rem;
     }
 
     .site-title {
-      font-size: var(--text-lg);
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      line-height: 1.1;
+      color: var(--gray-0);
+      text-decoration: none;
+    }
+
+    .menu-button {
+      position: relative;
+      display: flex;
+      border: 0;
+      border-radius: 999rem;
+      padding: 0.5rem;
+      font-size: 1.5rem;
+      color: var(--gray-300);
+      background: radial-gradient(var(--gray-900), var(--gray-800) 150%);
+      box-shadow: var(--shadow-sm);
+    }
+
+    .menu-button[aria-expanded="true"] {
+      color: var(--gray-0);
+      background: linear-gradient(180deg, var(--gray-600), transparent),
+        radial-gradient(var(--gray-900), var(--gray-800) 150%);
+    }
+
+    .menu-button[hidden] {
+      display: none;
+    }
+
+    .menu-button::before {
+      position: absolute;
+      inset: -1px;
+      content: "";
+      background: var(--gradient-stroke);
+      border-radius: 999rem;
+      z-index: -1;
     }
 
     .menu-content {
-      display: contents;
+      position: absolute;
+      left: 0;
+      right: 0;
     }
 
     .nav-items {
-      position: relative;
-      flex-direction: row;
-      font-size: var(--text-sm);
-      border-radius: 999rem;
-      border: 0;
-      padding: 0.5rem 0.5625rem;
-      background-color: transparent;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      font-size: var(--text-md);
+      line-height: 1.2;
+      list-style: none;
+      padding: 2rem;
+      background-color: var(--gray-999);
+      border-bottom: 1px solid var(--gray-800);
     }
 
     .link {
-      padding: 0.5rem 1rem;
-      border-radius: 999rem;
-      color: var(--menu-text-color);
-      transition:
-        color var(--theme-transition),
-        background-color var(--theme-transition);
+      display: flex;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.75rem;
+      color: var(--gray-300);
+      text-decoration: none;
     }
 
-    .link:hover,
-    .link:focus {
+    .link.active {
+      color: var(--menu-text-color-mobile);
+      background-color: var(--accent-regular);
+    }
+
+    .menu-footer {
+      --icon-size: var(--text-xl);
+      --icon-padding: 0.5rem;
+      display: flex;
+      justify-content: space-between;
+      gap: 0.75rem;
+      padding: 1.5rem 2rem 1.5rem 1.5rem;
+      background-color: var(--gray-999);
+      border-radius: 0 0 0.75rem 0.75rem;
+      box-shadow: var(--shadow-lg);
+    }
+
+    .socials {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.625rem;
+      font-size: var(--icon-size);
+    }
+
+    .social {
+      display: flex;
+      padding: var(--icon-padding);
+      text-decoration: none;
+      color: var(--accent-dark);
+      transition: color var(--theme-transition);
+    }
+
+    .social:hover,
+    .social:focus {
+      color: var(--accent-text-over);
+    }
+
+    .theme-toggle {
+      display: flex;
+      align-items: center;
+      height: calc(var(--icon-size) + 2 * var(--icon-padding));
+    }
+
+    .language-selector {
+      display: flex;
+      align-items: center;
+      height: calc(var(--icon-size) + 2 * var(--icon-padding));
+      gap: 0.3rem;
+    }
+
+    .lang-link {
+      display: flex;
+      padding: var(--icon-padding);
+      text-decoration: none;
+      color: var(--accent-dark);
+      transition: color var(--theme-transition);
+      border-radius: 0.2rem;
+    }
+
+    .lang-link:hover,
+    .lang-link:focus {
       color: var(--menu-text-color-hover);
       background-color: var(--menu-bg-color-hover);
     }
 
-    .link.active {
+    .lang-link.active {
       color: var(--menu-text-color-active);
       background-color: var(--menu-bg-color-active);
     }
 
-    .menu-footer {
-      --icon-padding: 0.375rem;
+    @media (min-width: 50em) {
+      nav {
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        align-items: center;
+        padding: 2.5rem 5rem;
+        gap: 1rem;
+      }
 
-      justify-self: flex-end;
-      align-items: center;
-      padding: 0;
-      background-color: transparent;
-      box-shadow: none;
+      .menu-header {
+        padding: 0;
+      }
+
+      .site-title {
+        font-size: var(--text-lg);
+      }
+
+      .menu-content {
+        display: contents;
+      }
+
+      .nav-items {
+        position: relative;
+        flex-direction: row;
+        font-size: var(--text-sm);
+        border-radius: 999rem;
+        border: 0;
+        padding: 0.5rem 0.5625rem;
+        background-color: transparent;
+      }
+
+      .link {
+        padding: 0.5rem 1rem;
+        border-radius: 999rem;
+        color: var(--menu-text-color);
+        transition:
+          color var(--theme-transition),
+          background-color var(--theme-transition);
+      }
+
+      .link:hover,
+      .link:focus {
+        color: var(--menu-text-color-hover);
+        background-color: var(--menu-bg-color-hover);
+      }
+
+      .link.active {
+        color: var(--menu-text-color-active);
+        background-color: var(--menu-bg-color-active);
+      }
+
+      .menu-footer {
+        --icon-padding: 0.375rem;
+
+        justify-self: flex-end;
+        align-items: center;
+        padding: 0;
+        background-color: transparent;
+        box-shadow: none;
+      }
+
+      .socials {
+        display: none;
+      }
     }
 
-    .socials {
-      display: none;
+    @media (min-width: 60em) {
+      .socials {
+        display: flex;
+        justify-content: flex-end;
+        gap: 0;
+      }
     }
-  }
-
-  @media (min-width: 60em) {
-    .socials {
-      display: flex;
-      justify-content: flex-end;
-      gap: 0;
+    @media (forced-colors: active) {
+      .link.active {
+        color: SelectedItem;
+      }
     }
-  }
-  @media (forced-colors: active) {
-    .link.active {
-      color: SelectedItem;
-    }
-  }
-</style>
+  </style>
+</nav>
