--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,8 @@ import Footer from '../components/Footer.astro';
 import i18next from "i18next";
 import { HeadHrefLangs } from "astro-i18next/components";
 
+import { ViewTransitions } from 'astro:transitions';
+
 interface Props {
 	title?: string | undefined;
 	description?: string | undefined;
@@ -17,12 +19,13 @@ const { title, description } = Astro.props;
 
 <html lang={i18next.language}>
 	<head>
+		<ViewTransitions />
 		<MainHead title={title} description={description} />
 		<HeadHrefLangs />
 	</head>
 	<body>
 		<div class="stack backgrounds">
-			<Nav />
+			<Nav transition:animate="slide"/>
 			<slot />
 			<Footer />
 		</div>
