--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,16 +14,16 @@ import ContactCTA from "../components/ContactCTA.astro";
 import Skills from "../components/Skills.astro";
 // Language support
 import { t, changeLanguage } from "i18next";
-
 changeLanguage("en");
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection("work"))
-    .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-    .slice(0, 4);
+  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .slice(0, 4);
 ---
 
 <BaseLayout>
+  <aside transition:name="hero"></aside>
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
