--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,9 @@
 	--menu-text-color-hover: var(--gray-900);
 	--menu-bg-color-hover: var(--accent-regular);
 
+	/* Menu Mobile */
+	--menu-text-color-mobile: var(--gray-900);
+
 	/* Gradients */
 	--gradient-stop-1: var(--accent-light);
 	--gradient-stop-2: var(--accent-regular);
@@ -110,6 +113,9 @@
 	--menu-bg-color-active: var(--accent-regular);
 	--menu-text-color-hover: var(--gray-0);
 	--menu-bg-color-hover: var(--accent-overlay);
+
+	/* Menu Mobile */
+	--menu-text-color-mobile: var(--gray-0);
 
 	--gradient-stop-1: #4c11c6;
 	--gradient-subtle: linear-gradient(150deg, var(--gray-900) 19%, var(--gray-999) 81%);
