--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,11 @@
 ---
-import { changeLanguage } from "i18next";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import ContactCTA from "../components/ContactCTA.astro";
 import Hero from "../components/Hero.astro";
-
 // Personal info
 import { personalInfo } from "../constants";
-
 // Object to translate
-import { t } from "i18next";
+import { t, changeLanguage } from "i18next";
 
 changeLanguage("en");
 ---
