--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -24,6 +24,7 @@ const projects = (await getCollection("work"))
 ---
 
 <BaseLayout>
+  <aside transition:name="hero"></aside>
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
@@ -45,7 +46,6 @@ const projects = (await getCollection("work"))
           height="620"
           src="/assets/portrait.jpg"
         />
-      {t("home.title")}
       </header>
 
       <Skills />
