--- a/src/pages/es/work.astro
+++ b/src/pages/es/work.astro
@@ -1,11 +1,15 @@
 ---
-import { changeLanguage } from "i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import ContactCTA from "../../components/ContactCTA.astro";
 import PortfolioPreview from "../../components/PortfolioPreview.astro";
 import Hero from "../../components/Hero.astro";
 import Grid from "../../components/Grid.astro";
+// import { ViewTransitions } from "astro:transitions";
+// Personal info
+import { personalInfo } from "../../constants";
+// Object to translate
+import { t, changeLanguage } from "i18next";
 
 changeLanguage("es");
 
@@ -13,9 +17,10 @@ const projects = (await getCollection("work")).sort((a, b) => b.data.publishDate
 ---
 
 <BaseLayout
-	title="My Work | Jeanine White"
+	title={`${t("common.workTabTitle")} | ${personalInfo.name}`}
 	description="Learn about Jeanine White's most recent projects"
 >
+	<aside transition:name="hero"></aside>
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
