--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,5 +1,4 @@
 ---
-import { changeLanguage } from "i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import ContactCTA from "../components/ContactCTA.astro";
@@ -9,10 +8,9 @@ import Grid from "../components/Grid.astro";
 // import { ViewTransitions } from "astro:transitions";
 // Personal info
 import { personalInfo } from "../constants";
-
 // Object to translate
-import { t } from "i18next";
- 
+import { t, changeLanguage } from "i18next";
+
 changeLanguage("en");
 
 const projects = (await getCollection("work")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf());
