--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,13 +14,14 @@ import ContactCTA from "../components/ContactCTA.astro";
 import Skills from "../components/Skills.astro";
 // Language support
 import { t, changeLanguage } from "i18next";
+import IconSVG from "../constants/IconSVG.astro";
 
 changeLanguage("en");
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection("work"))
-    .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
-    .slice(0, 4);
+  .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
+  .slice(0, 4);
 ---
 
 <BaseLayout>
@@ -30,21 +31,23 @@ const projects = (await getCollection("work"))
       <header class="hero">
         <Hero
           title={t("home.title")}
-          tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+          tagline={t("home.description") as string}
           align="start"
         >
           <div class="roles">
-            <Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-            <Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-            <Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+            <Pill><Icon icon="code" size="1.33em" /> Full-stack</Pill>
+            <Pill><IconSVG icon="javascript"/> JavaScript</Pill>
+            <Pill><IconSVG icon="react"/> React</Pill>
+            <Pill><IconSVG icon="nodejs"/> Node.js</Pill>
+            
           </div>
         </Hero>
 
         <img
-          alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+          alt="Christian Guaman smiling in a lake"
           width="480"
           height="620"
-          src="/assets/portrait.jpg"
+          src="/assets/portrait.webp"
         />
       </header>
 
