color: Change color for red

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -206,7 +206,7 @@ changeLanguage(i18next.language);
       gap: 0.5rem;
       align-items: center;
       line-height: 1.1;
-      color: var(--gray-0);
+      color: var(--red-0);
       text-decoration: none;
     }
 
@@ -217,15 +217,15 @@ changeLanguage(i18next.language);
       border-radius: 999rem;
       padding: 0.5rem;
       font-size: 1.5rem;
-      color: var(--gray-300);
-      background: radial-gradient(var(--gray-900), var(--gray-800) 150%);
+      color: var(--red-300);
+      background: radial-gradient(var(--red-900), var(--red-800) 150%);
       box-shadow: var(--shadow-sm);
     }
 
     .menu-button[aria-expanded="true"] {
-      color: var(--gray-0);
-      background: linear-gradient(180deg, var(--gray-600), transparent),
-        radial-gradient(var(--gray-900), var(--gray-800) 150%);
+      color: var(--red-0);
+      background: linear-gradient(180deg, var(--red-600), transparent),
+        radial-gradient(var(--red-900), var(--red-800) 150%);
     }
 
     .menu-button[hidden] {
@@ -256,15 +256,15 @@ changeLanguage(i18next.language);
       line-height: 1.2;
       list-style: none;
       padding: 2rem;
-      background-color: var(--gray-999);
-      border-bottom: 1px solid var(--gray-800);
+      background-color: var(--red-999);
+      border-bottom: 1px solid var(--red-800);
     }
 
     .link {
       display: flex;
       padding: 0.75rem 1.5rem;
       border-radius: 0.75rem;
-      color: var(--gray-300);
+      color: var(--red-300);
       text-decoration: none;
     }
 
@@ -280,7 +280,7 @@ changeLanguage(i18next.language);
       justify-content: space-between;
       gap: 0.75rem;
       padding: 1.5rem 2rem 1.5rem 1.5rem;
-      background-color: var(--gray-999);
+      background-color: var(--red-999);
       border-radius: 0 0 0.75rem 0.75rem;
       box-shadow: var(--shadow-lg);
     }
