--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -180,7 +180,7 @@ const projects = (await getCollection("work"))
     background:
       url("/assets/backgrounds/noise.png") top center/220px repeat,
       var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
-      var(--gray-999);
+      var(--red-999);
     background-blend-mode: overlay, normal, normal, normal;
     mix-blend-mode: var(--bg-blend-mode);
     z-index: -1;
@@ -195,7 +195,7 @@ const projects = (await getCollection("work"))
     text-align: center;
     max-width: 50ch;
     font-size: var(--text-md);
-    color: var(--gray-300);
+    color: var(--red-300);
   }
 
   .section-header h3 {
@@ -244,9 +244,9 @@ const projects = (await getCollection("work"))
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 1px solid var(--gray-800);
+    border: 1px solid var(--red-800);
     border-radius: 1.5rem;
-    color: var(--gray-300);
+    color: var(--red-300);
     background: var(--gradient-subtle);
     box-shadow: var(--shadow-sm);
   }
