--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -17,10 +17,10 @@ import Icon from './Icon.astro';
 		flex-direction: column;
 		align-items: center;
 		gap: 3rem;
-		border-top: 1px solid var(--gray-800);
-		border-bottom: 1px solid var(--gray-800);
+		border-top: 1px solid var(--red-800);
+		border-bottom: 1px solid var(--red-800);
 		padding: 5rem 1.5rem;
-		background-color: var(--gray-999_40);
+		background-color: var(--red-999_40);
 		box-shadow: var(--shadow-sm);
 	}
 
