--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -19,7 +19,7 @@ const { data, slug } = Astro.props.project;
 		grid-template: auto 1fr / auto 1fr;
 		height: 11rem;
 		background: var(--gradient-subtle);
-		border: 1px solid var(--gray-800);
+		border: 1px solid var(--red-800);
 		border-radius: 0.75rem;
 		overflow: hidden;
 		box-shadow: var(--shadow-sm);
@@ -39,8 +39,8 @@ const { data, slug } = Astro.props.project;
 		z-index: 1;
 		margin: 0.5rem;
 		padding: 0.5rem 1rem;
-		background: var(--gray-999);
-		color: var(--gray-200);
+		background: var(--red-999);
+		color: var(--red-200);
 		border-radius: 0.375rem;
 	}
 
