--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -22,10 +22,10 @@ import Icon from './Icon.astro';
 
 <style>
 	.box {
-		border: 1px solid var(--gray-800);
+		border: 1px solid var(--red-800);
 		border-radius: 0.75rem;
 		padding: 1.5rem;
-		background-color: var(--gray-999_40);
+		background-color: var(--red-999_40);
 		box-shadow: var(--shadow-sm);
 	}
 
@@ -40,7 +40,7 @@ import Icon from './Icon.astro';
 	}
 
 	.skills p {
-		color: var(--gray-400);
+		color: var(--red-400);
 	}
 
 	@media (min-width: 50em) {
