--- a/src/pages/es/about.astro
+++ b/src/pages/es/about.astro
@@ -85,13 +85,13 @@ description="About Jeanine White Lorem Ipsum">
 		display: flex;
 		flex-direction: column;
 		gap: 0.5rem;
-		color: var(--gray-200);
+		color: var(--red-200);
 	}
 
 	.section-title {
 		grid-column-start: 1;
 		font-size: var(--text-xl);
-		color: var(--gray-0);
+		color: var(--red-0);
 	}
 
 	.content {
