--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -58,7 +58,7 @@ const { Content } = await entry.render();
 <style>
 	header {
 		padding-bottom: 2.5rem;
-		border-bottom: 1px solid var(--gray-800);
+		border-bottom: 1px solid var(--red-800);
 	}
 
 	.back-link {
@@ -105,7 +105,7 @@ const { Content } = await entry.render();
 		border-radius: 1.5rem;
 		box-shadow: var(--shadow-sm);
 		background: var(--gradient-subtle);
-		border: 1px solid var(--gray-800);
+		border: 1px solid var(--red-800);
 	}
 
 	.content :global(blockquote) {
@@ -115,7 +115,7 @@ const { Content } = await entry.render();
 		line-height: 1.1;
 		padding-inline-start: 1.5rem;
 		border-inline-start: 0.25rem solid var(--accent-dark);
-		color: var(--gray-0);
+		color: var(--red-0);
 	}
 
 	.back-link,
